--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
 authors = [
-    {name = "Sergei Lutchenko", email = "your.email@example.com"}
+    {name = "Sergei Lutchenko", email = "lutchenko@me.com"}
 ]
 keywords = ["cache", "scraping", "sgrequests", "redis", "performance"]
 classifiers = [
@@ -50,10 +50,10 @@ metrics = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/sgrequests-cache"
-Documentation = "https://github.com/yourusername/sgrequests-cache#readme"
-Repository = "https://github.com/yourusername/sgrequests-cache"
-Issues = "https://github.com/yourusername/sgrequests-cache/issues"
+Homepage = "https://github.com/datarhan/sgrequests-cache"
+Documentation = "https://github.com/datarhan/sgrequests-cache#readme"
+Repository = "https://github.com/datarhan/sgrequests-cache"
+Issues = "https://github.com/datarhan/sgrequests-cache/issues"
 
 [tool.setuptools]
 packages = ["sgrequests_cache", "sgrequests_cache.backends"]
